[metadata]
name = coprbuild
author = Mikhail Ushanov
author-email = gm.mephisto@gmail.com
summary = COPR Build System helper
home-page = https://github.com/gmmephisto/coprbuild
license = GPLv3
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Topic :: Software Development :: Build Tools
    Topic :: Utilities
keywords =
    copr
    rpm

[files]
packages =
    coprbuild

[entry_points]
console_scripts =
    copr-build = coprbuild.build:main
